--- a/FirstProject/src/main/resources/application.properties
+++ b/FirstProject/src/main/resources/application.properties
@@ -7,22 +7,28 @@ spring.datasource.username=postgres
 spring.datasource.password=Manas2208
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate / JPA
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Logging Configuration
-SERVICE_NAME=spring-boot-app
+# Logging & Service Info
+app.service.name=spring-boot-app
 logging.config=classpath:logback-spring.xml
 logging.level.root=INFO
 logging.level.com.evolotek.firstproject=DEBUG
 
 # OpenTelemetry Configuration
-otel.exporter.otlp.endpoint=http://localhost:4318
-otel.resource.attributes=service.name=${SERVICE_NAME}
+otel.exporter.otlp.traces.endpoint=http://otel-collector:4317
+otel.exporter.otlp.logs.endpoint=http://otel-collector:4317
+otel.exporter.otlp.metrics.endpoint=http://otel-collector:4317
+otel.resource.attributes=service.name=${app.service.name}
+otel.logs.exporter=otlp
+otel.propagators=baggage,tracecontext
+
+# Spring Boot Actuator & Metrics
 management.tracing.enabled=true
 management.endpoints.web.exposure.include=health,info,metrics
 management.metrics.export.otlp.enabled=true
