--- a/FirstProject/docker-compose.yml
+++ b/FirstProject/docker-compose.yml
@@ -1,12 +1,30 @@
 version: '3.8'
+
 services:
+  postgres:
+    image: postgres:16
+    container_name: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: demodb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Manas2208
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
   loki:
     image: grafana/loki:2.8.2
+    container_name: loki
     ports:
       - "3100:3100"
+    volumes:
+      - ./loki-config.yaml:/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/local-config.yaml
 
   grafana:
     image: grafana/grafana:9.5.2
+    container_name: grafana
     ports:
       - "3000:3000"
     depends_on:
@@ -16,17 +34,20 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
     volumes:
       - grafana-storage:/var/lib/grafana
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
 
   otel-collector:
     image: otel/opentelemetry-collector:0.88.0
+    container_name: otel-collector
     volumes:
       - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
     command: ["--config", "/etc/otel-collector-config.yaml"]
     ports:
-      - "4317:4317"     # OTLP gRPC
-      - "4318:4318"     # OTLP HTTP
+      - "4317:4317"
+      - "4318:4318"
     depends_on:
       - loki
 
 volumes:
   grafana-storage:
+  postgres-data:
