--- a/FirstProject/pom.xml
+++ b/FirstProject/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -10,32 +11,25 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<!-- Spring Boot starter parent manages versions -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<properties>
 		<java.version>17</java.version>
 		<lombok.version>1.18.26</lombok.version>
-		<spring-boot-maven-plugin.version>3.1.1</spring-boot-maven-plugin.version>
-		<otel.version>1.27.0</otel.version> <!-- OpenTelemetry version -->
+		<spring-boot-maven-plugin.version>3.2.5</spring-boot-maven-plugin.version>
+		<otel.version>1.27.0</otel.version>
 	</properties>
 
 	<dependencies>
-		<!-- Spring Boot Web Starter (includes spring-webmvc) -->
+		<!-- Spring Boot Web Starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.servlet</groupId>
-			<artifactId>jakarta.servlet-api</artifactId>
-			<version>6.0.0</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<!-- Spring Boot Data JPA -->
@@ -87,6 +81,13 @@
 			<version>${otel.version}</version>
 		</dependency>
 
+		<!-- OpenTelemetry Context Propagation -->
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-context</artifactId>
+			<version>${otel.version}</version>
+		</dependency>
+
 		<!-- Logstash Logback Encoder for JSON logging -->
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
@@ -94,7 +95,14 @@
 			<version>7.4</version>
 		</dependency>
 
-		<!-- Springdoc OpenAPI UI Starter with spring-webmvc excluded -->
+		<!-- SLF4J Bridge for Java Util Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Springdoc OpenAPI UI Starter -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -106,19 +114,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
-		<!-- Context Propagation -->
-		<dependency>
-			<groupId>io.opentelemetry</groupId>
-			<artifactId>opentelemetry-context</artifactId>
-			<version>${otel.version}</version>
-		</dependency>
-
-		<!-- SLF4J Bridge for JUL (optional) -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jul-to-slf4j</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -129,6 +124,25 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot-maven-plugin.version}</version>
 			</plugin>
+
+			<!-- Compiler Plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
 </project>
